dok: fehlende Hilfsmittel angabe

--- a/Dok/fhnw_ht_eit_latex_template.tex
+++ b/Dok/fhnw_ht_eit_latex_template.tex
@@ -93,15 +93,16 @@ Projektnummer              &    \verb|25FS_IIT41|\\[4ex]
 
 \begin{tabular}{|p{3cm}|p{8cm}|p{3cm}|}
     \hline
-    \textbf{Hilfsmittel} & \textbf{Verwendungszweck} & \textbf{Scope}\\
+    \textbf{Hilfsmittel} & \textbf{Verwendungszweck} & \textbf{Scope} \\
     \hline
-    ChatGPT & Rechtschreibe- und Grammatikprüfung & Ganze Arbeit \\
+    ChatGPT & Rechtschreibe- und Grammatikprüfung; Erstellung von Storyboard-Bildern & Ganze Arbeit \\
     \hline
     Gemini & Rechtschreibe- und Grammatikprüfung & Ganze Arbeit \\
     \hline
     Overleaf & Erstellung, Bearbeitung und Kollaboration am LaTeX-Dokument & Ganze Arbeit \\
     \hline
 \end{tabular}
+
 
 }
 
